<resources>
    <string name="app_name">LifeStream</string>
    <string name="app_name1">Life</string>
    <string name="app_name2">Stream</string>
    <string name="sub_topic">Donate | Save | Community</string>
    <string name="no_internet_connection">No internet Connection</string>
    <string name="no_internet_txt">Your internet connection is currently in not available. Please check and try again</string>
    <string name="try_again">Try Again</string>
    <string name="no_user_deatils">Not Enough Your Profile Data</string>
    <string name="no_user_details_txt">Complete Your Account details to use this feature. Because some of data use to process this feature...</string>

    <string-array name="province_array">
        <item>--select--</item>
        <item>Central</item>
        <item>North Central</item>
        <item>Northern</item>
        <item>Eastern</item>
        <item>North Western</item>
        <item>Southern</item>
        <item>Uva</item>
        <item>Sabaragamuwa</item>
        <item>Western</item>
    </string-array>

    <string-array name="blood_array">
        <item>--select--</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>

    </string-array>
</resources>