<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:gravity="center"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal|center_vertical">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:srcCompat="@drawable/splashscreen"/>
        <LinearLayout
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/app_name1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name1"
                android:textStyle="bold"
                android:fontFamily="@font/roboto_bold"
                android:textSize="30sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/app_name2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name2"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/app_red"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/sub_topic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub_topic"
            android:fontFamily="@font/roboto_bold"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/black"/>

    </LinearLayout>

</RelativeLayout>